Add docs for carts
